<resources>
    <string name="app_name">My Bus</string>
    <string name="download_app_today_for_faster_way">Install our app from play store for fastest way to book your tickets to the heavenly villages of Raigad !</string>
    <string name="oops">OOPS !</string>
    <string name="no_internet_connection_message">No Internet Connection, Make sure that Wi-Fi or Mobile Data is turned on, then try again.</string>
    <string name="check">Check</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_click_back_again_to_exit">"Please click BACK again to exit "</string>
    <string name="check_otp">Please check your message box for verification code.</string>
    <string name="enter_otp">Enter Your Verification Code</string>
    <string name="verification">Verification</string>
    <string name="submit">Confirm</string>
    <string name="resendotp"><u>Resend otp</u></string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="error_in_connection_please_try_again_letter">Error In Conection,\nPlease Try again Later.</string>
    <string name="my_booking">My Booking</string>
    <string name="my_account">My Account</string>
    <string name="my_bookings">My Bookings</string>
    <string name="help">Help</string>
    <string name="contactUs">Contact</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="otp_timeout">Otp Timeout</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_valid_email_id">Enter Valide Email Id</string>
    <string name="please_enter_valid_dob">Please Enter Valid DOB</string>
    <string name="enter_source">Enter Source</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_want_to_logout">Are You Sure Want To Logout ?</string>
    <string name="bus_name">Bus Name</string>
    <string name="total_seat">Total Seat</string>
    <string name="please_enter_source">Please Enter Source</string>
    <string name="please_enter_destination">Please Enter Destination</string>
    <string name="please_enter_date">Please Enter Date</string>
    <string name="total_price">Total Price</string>
    <string name="offer">Offers</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_with_facebook">Continue With Facebook</string>
    <string name="sign_with_google">Continue With Google</string>
    <string name="or">OR</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_verification_code">Enter Your Verification Code</string>
    <string name="enter_name">Enter Name</string>
    <string name="your_name">Your Name</string>
    <string name="your_age">Your Age</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="your_email_id">Your Email Id</string>
    <string name="boarding_point">Boarding Point</string>
    <string name="dropping_point">Dropping Point</string>
    <string name="next">Next</string>
    <string name="please_select_boarding">Please Select Boarding</string>
    <string name="please_select_dropping">Please Select Dropping</string>
    <string name="no_data_found">No Data Found</string>
    <string name="price">Price</string>
    <string name="price_ruppe_zero">Price \u20B9 0.0</string>
    <string name="total_price_ruppe_zero">Total Price \u20B9 0.0</string>
    <string name="please_select_seat">Please Select Seat</string>
    <string name="email_id">Email ID</string>
    <string name="passenger_information">Passenger Information</string>
    <string name="passenger">Passenger</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="seat">Seat</string>
    <string name="age">Age</string>
    <string name="from_city">From City</string>
    <string name="to_city">To City</string>
    <string name="depart_time">Depart Time</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="price_details">Price Details</string>
    <string name="original_price">Original Price</string>
    <string name="discount_price">Discount Price</string>
    <string name="final_amount">Final Amount</string>
    <string name="amount_to_pay">Amount To Pay</string>
    <string name="coupon_apply">Coupon Apply</string>
    <string name="please_fill_passenger_info">Please Fill Passenger Info</string>
    <string name="please_fill_contact_details">PLease Fill Contact Details</string>
    <string name="not_applied">Not Applied</string>
    <string name="proceed">Proceed</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="cancelled_bookings">Cancelled Booking</string>
    <string name="reference_number">Reference Number</string>
    <string name="travelling_date">Travelling Date</string>
    <string name="no_records_found">No Records Found</string>
    <string name="boarding_and_droping">"Boarding and Droping "</string>
    <string name="bus_details">Bus Details</string>
    <string name="booking">Booking</string>
    <string name="bus_list">Bus List</string>
    <string name="enter_your_otp_code">Enter Your OTP Code</string>
    <string name="seat_list">Seat List</string>
    <string name="selected_seat">Selected Seat</string>
    <string name="expires_on">Expires On</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="please_enter_coupon_code">Please Enter Coupon Code</string>
    <string name="copy_code">Copy Code</string>
    <string name="coupon_copied">Coupon Copied</string>
    <string name="facebook_authentication_failed">Facebook Authentication Failed</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="app_update">App Update</string>
    <string name="coupon_applied_sucessfully">Congratulations, Coupon Applied Sucessfully</string>
    <string name="travelling_time">Travelling Time</string>
    <string name="seat_available">Seat Available</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="bus_timing">Bus Timing</string>
    <string name="date">Date</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="total_discount">Total Discount</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="unique_code">Unique Code</string>
    <string name="selecte_route">Select Route</string>
    <string name="select_village">Select Village</string>
    <string name="select_area">Select Area</string>
    <string name="please_select_route">Please Select Route</string>
    <string name="please_select_route_and_village">Please Select Route and Village</string>
    <string name="search_routes">Search Routes</string>
    <string name="update_code">Update Code</string>
    <string name="add_unique_code">Add Unique Code</string>
    <string name="please_select_route_and_village_area">Please Select Route, Village and Area</string>
    <string name="cancel_refund_amount">Cancel and Refund Amount</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_want_to_cancel_this_booking">Are you sure want to cancel this Booking ?</string>
    <string name="refund_id">Refund Id</string>
    <string name="refund_status_pending">Refund Status Pending</string>
    <string name="refund_status">Refund Status</string>
    <string name="refund_applied_successfully">Refund Applied Successfully</string>
    <string name="not_found">Not Found</string>
    <string name="share">Share</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="profile">Profile</string>
    <string name="ticket_cancelled_successfully">Ticket Cancelled Successfully</string>
    <string name="ticket">Ticket</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="refund_number">Refund Number</string>
    <string name="your_refund_number_is">Your Refund number is</string>
    <string name="refund">Refund</string>
    <string name="refund_date">Refund Date</string>
    <string name="unicode_created_successfully">Unicode Created Successfully</string>
    <string name="refund_no">Refund No</string>
    <string name="ticket_no">Ticket No</string>
    <string name="search_village">Search Village</string>
    <string name="search_area">Search Area</string>
    <string name="start_time">Start Time</string>
    <string name="view_invoice">View Invoice</string>
    <string name="boarding_time">Boarding Time</string>
    <string name="dropping_time">Dropping Time</string>
    <string name="please_select_all_fields">Please Select All Fields</string>
    <string name="copy_to_all">Copy To All</string>
    <string name="copy_all">COPY ALL</string>
    <string name="please_enter_first_passenger_name">Please Enter First Passenger Name</string>
    <string name="please_enter_first_passenger_age">Please Enter First Passenger Age</string>
    <string name="please_fill_your_profile">Please Fill Your Profile</string>
    <string name="note">Note</string>
    <string name="resend_otp_message">Resend OTP Message</string>
    <string name="resend_in">Resend IN</string>
    <string name="booked">Booked</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="designed_and_developed">Designed &amp; Developed By : NatureInfotech</string>
    <string name="dob">DOB</string>
    <string name="please_fill_valid_dob">Please Fill Valid DOB</string>
    <string name="coupons">Coupons</string>
    <string name="available_coupons">Available Coupons</string>
    <string name="return_journey">Return Journey</string>
    <string name="return_journey_coupon">Return Journey Coupon</string>
    <string name="congo_return_journey_coupon">Congratulations, You Get Return Journey Coupon.</string>
    <string name="selected">Selected</string>
    <string name="check_available_coupons">Check Available Coupons</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="cancellation_date">Cancellation Date</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_camera_message">Camera and Gallery needs few permissions to work properly. Grant them in settings.</string>
    <string name="permission_file_message">Download File needs few permissions to work properly. Grant them in settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="done">Done</string>
    <string name="personal_details">Personal Details</string>
    <string name="select_image">Select Image</string>
    <string name="select_from_camera">Select From Camera</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="user_camera_cancelled">User Camera Cancelled</string>
</resources>