<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:padding="10dp"
                app:cardBackgroundColor="@color/color_white"
                app:cardCornerRadius="@dimen/_4sdp"
                app:cardElevation="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/_5sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_passenger_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_toLeftOf="@+id/tv_seat_no"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/passenger"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tv_seat_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:padding="@dimen/_5sdp"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/_12ssp" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:hint="@string/name"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:paddingLeft="@dimen/_5sdp"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_12ssp" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageView"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <RadioButton
                            android:id="@+id/radiomale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radiofemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/female" />

                    </RadioGroup>

                    <EditText
                        android:id="@+id/et_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:hint="@string/age"
                        android:maxLength="3"
                        android:inputType="number"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_12ssp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </RelativeLayout>

</layout>
