<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:id="@+id/id_lay_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/bus_name"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_message_size_15"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/tv_tot_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:padding="@dimen/_2sdp"
                            android:text="@string/travelling_time"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_message_size_13" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_total_seat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/seat_available"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_message_size_13" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@color/color_text_color_gray_light_2" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>

